--- a/Other Pages/Education.html
+++ b/Other Pages/Education.html
@@ -12,7 +12,7 @@
     <h2>University Of The Arts London (UAL)</h2>
     <h3>BA (Hons) Games Design</h3>
     <h4>2016-2019</h4>
-    <img src="../../Images/UAL.jpg" height="300"/ alt="Image of University Of The Arts London" />
+    <img src="../Images/UAL.jpg" height="300"/ alt="Image of University Of The Arts London" />
 
     <p>I studied games design at UAL from 2016 and achieved my Bachelors with honors in 2019. <br />
     I loved my time at university! I moved away from a small countryside town in the Northwest to the big city of London and found it incredibly thrilling! I would love to go back and do my masters degree at some point in the future.
@@ -35,7 +35,7 @@
         </ul>
     </ul>
     <h4>2014-2016</h4>
-    <img src="../../Images/John Deanes.jpg" height="300"/ alt="Image of University Of The Arts London" />
+    <img src="../Images/John Deanes.jpg" height="300"/ alt="Image of University Of The Arts London" />
 
     <p>I studied a lot of creative subjects during my time at Sir John Deane's Sixth Form College <br />
     I worked extremely hard during my 2 years, and managed to achieve 3 A* A-levels, even going as far to achieve 100% marks in my Photography course!
