--- a/Other Pages/Other.html
+++ b/Other Pages/Other.html
@@ -10,8 +10,8 @@
     <hr />
 
     <h2>Contact Me</h2>
-    <a href="haylz.1031@gmail.com"><img src="../../Images/email.jpg" height="50" alt="image of letter with link to email address"/></a>
-    <a href="https://www.linkedin.com"><img src="../../Images/linkedin.png" height="30" alt="image of the linkedin logo" /></a>
+    <a href="haylz.1031@gmail.com"><img src="../Images/email.jpg" height="50" alt="image of letter with link to email address"/></a>
+    <a href="https://www.linkedin.com"><img src="../Images/linkedin.png" height="30" alt="image of the linkedin logo" /></a>
 <hr />
     <a href="../index.html">return to homepage</a>
     <footer>© Vavvi. All rights reserved.</footer>
