--- a/Other Pages/Work.html
+++ b/Other Pages/Work.html
@@ -16,7 +16,7 @@
     <hr />
 
     <ol start="2016">
-        <li><h3>O2 Arena, London</h3><img src="../../Images/o2 arena.jpeg" height="300" alt="Image of the o2 arena in London"/><p>I worked as a bartender and server within the O2 arena for 3 years while attending University. My job roles included the following:</p>
+        <li><h3>O2 Arena, London</h3><img src="../Images/o2 arena.jpeg" height="300" alt="Image of the o2 arena in London"/><p>I worked as a bartender and server within the O2 arena for 3 years while attending University. My job roles included the following:</p>
             <ul>
                 <li>Cashier in a busy and fast-paced environment</li>
                 <li>Personal Suite attendant in the VIP suites</li>
@@ -26,9 +26,9 @@
             </ul>
         </li>
         <hr />
-        <li><h3>Winter Wonderland</h3><img src="../../Images/Winter Wonderland.jpg" height="300" alt="Image of winter wonderland in London"/><p>I worked as a bartender at Winter Wonderland during December while I was at university</p></li>
+        <li><h3>Winter Wonderland</h3><img src="../Images/Winter Wonderland.jpg" height="300" alt="Image of winter wonderland in London"/><p>I worked as a bartender at Winter Wonderland during December while I was at university</p></li>
         <hr />
-        <li><h3>Picadilly Institute</h3><img src="../../Images/PI.jpg" height="300" alt="Image ofa nightclub in London"/><p>I worked as a bartender in this popular London nightclub and my duties included:</p>
+        <li><h3>Picadilly Institute</h3><img src="../Images/PI.jpg" height="300" alt="Image ofa nightclub in London"/><p>I worked as a bartender in this popular London nightclub and my duties included:</p>
             <ul>
                 <li>Cocktail making</li>
                 <li>Providing great service for customers</li>
